--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Matching project 0.1.2 (十一月 10, 2012):
+	* Feature add: add line operator for microwave element
+
+Matching project 0.1.1 (十一月 04, 2012):
+    * Feature add: add S2P reader and the demo cpp
+
 Matching project 0.1.0 (十一月 04, 2012):
 	* Feature add: project start
-    * Feature add: add S2P reader and the demo cpp
