--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Matching project 0.1.3 (十一月 12, 2012):
+	* Feature add: default read source and target file
+	* Feature add: user can specify one element to optimize
+
 Matching project 0.1.2 (十一月 10, 2012):
 	* Feature add: add line operator for microwave element
 
