--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Matching project 0.1.6 (11, 29, 2012):
+    * Feature add: 2-layerGA completed
+
 Matching project 0.1.6 (11, 23, 2012):
 	* Adjust: make line_operator as a class
 
