2layer-GA with constraint-consideration completed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,13 @@
-Matching project 0.1.6 (11, 29, 2012):
+Matching project 0.3.0 (12, 03, 2012):
+    * Feature add: 2-layerGA with constraint-consideration
+
+Matching project 0.2.2 (11, 29, 2012):
     * Feature add: 2-layerGA completed
 
-Matching project 0.1.6 (11, 23, 2012):
+Matching project 0.2.1 (11, 23, 2012):
 	* Adjust: make line_operator as a class
 
-Matching project 0.1.5 (11, 22, 2012)
+Matching project 0.2.0 (11, 22, 2012)
     * Feature add: change binary GA to real GA
     * Feature add: add RTR alg
 
